implementing the hamburger

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,23 @@
           >
             Home
           </a>
+          
+          <button
+            class="cursor-pointer text-xl leading-none px-3 py-1 border border-solid border-transparent rounded bg-transparent block lg:hidden lg:outline-none focus:outline-none"
+            type="button"
+            onclick="toggleNavbar('example-collapse-navbar')"
+          >
+            <i class="text-white fas fa-bars"></i>
+          </button>
         </div>
       </div>
     </nav>
+
+    <script>
+      function toggleNavbar(collapseId) {
+        document.getElementById(collapseId).classList.toggle("hidden");
+        document.getElementById(collapseId).classList.toggle("block");
+      }
+    </script>
   </body>
 </html>
