--- a/public/index.html
+++ b/public/index.html
@@ -12,23 +12,23 @@
   </head>
   <body class="bg-black">
     <nav
-      class="top-0 absolute z-50 w-full flex flex-wrap items-center justify-between px-2 py-3"
+      class="absolute top-0 z-50 flex flex-wrap items-center justify-between w-full px-2 py-3"
     >
       <div
-        class="container px-4 mx-auto flex flex-wrap items-center justify-between"
+        class="container flex flex-wrap items-center justify-between px-4 mx-auto"
       >
         <div
-          class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start"
+          class="relative flex justify-between w-full lg:w-auto lg:static lg:block lg:justify-start"
         >
           <a
             href="#home"
-            class="text-sm font-bold leading-relaxed inline-block mr-4 py-2 whitespace-nowrap uppercase text-white"
+            class="inline-block py-2 mr-4 text-sm font-bold leading-relaxed text-white uppercase whitespace-nowrap"
           >
             Home
           </a>
 
           <button
-            class="cursor-pointer text-xl leading-none px-3 py-1 border border-solid border-transparent rounded bg-transparent block lg:hidden lg:outline-none focus:outline-none"
+            class="block px-3 py-1 text-xl leading-none bg-transparent border border-transparent border-solid rounded cursor-pointer lg:hidden lg:outline-none focus:outline-none"
             type="button"
             onclick="toggleNavbar('example-collapse-navbar')"
           >
@@ -37,17 +37,17 @@
         </div>
 
         <div
-          class="lg:flex grow items-center bg-white lg:bg-transparent lg:shadow-none hidden"
+          class="items-center hidden bg-white lg:flex grow lg:bg-transparent lg:shadow-none"
           id="example-collapse-navbar"
         >
-          <ul class="flex flex-col lg:flex-row list-none mr-auto">
+          <ul class="flex flex-col mr-auto list-none lg:flex-row">
             <li class="flex items-center">
               <a
                 href="#ipad"
-                class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
+                class="flex items-center px-3 py-4 text-xs font-bold text-gray-800 uppercase lg:text-white lg:hover:text-gray-300 lg:py-2"
               >
                 <i
-                  class="lg:text-gray-300 text-gray-500 fas fa-tablet text-lg leading-lg mr-2"
+                  class="mr-2 text-lg text-gray-500 lg:text-gray-300 fas fa-tablet leading-lg"
                 ></i>
                 Ipad
               </a>
@@ -55,10 +55,10 @@
             <li class="flex items-center">
               <a
                 href="#macbook"
-                class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
+                class="flex items-center px-3 py-4 text-xs font-bold text-gray-800 uppercase lg:text-white lg:hover:text-gray-300 lg:py-2"
               >
                 <i
-                  class="lg:text-gray-300 text-gray-500 fas fa-laptop text-lg leading-lg mr-2"
+                  class="mr-2 text-lg text-gray-500 lg:text-gray-300 fas fa-laptop leading-lg"
                 ></i>
                 Macbook
               </a>
@@ -66,10 +66,10 @@
             <li class="flex items-center">
               <a
                 href="#team"
-                class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
+                class="flex items-center px-3 py-4 text-xs font-bold text-gray-800 uppercase lg:text-white lg:hover:text-gray-300 lg:py-2"
               >
                 <i
-                  class="lg:text-gray-300 text-gray-500 fas fa-users text-lg leading-lg mr-2"
+                  class="mr-2 text-lg text-gray-500 lg:text-gray-300 fas fa-users leading-lg"
                 ></i>
                 Team
               </a>
@@ -77,45 +77,45 @@
             <li class="flex items-center">
               <a
                 href="#contact"
-                class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
+                class="flex items-center px-3 py-4 text-xs font-bold text-gray-800 uppercase lg:text-white lg:hover:text-gray-300 lg:py-2"
               >
                 <i
-                  class="lg:text-gray-300 text-gray-500 fas fa-address-card text-lg leading-lg mr-2"
+                  class="mr-2 text-lg text-gray-500 lg:text-gray-300 fas fa-address-card leading-lg"
                 ></i>
                 Contact Us
               </a>
             </li>
           </ul>
 
-          <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">
+          <ul class="flex flex-col list-none lg:flex-row lg:ml-auto">
             <li class="flex items-center">
               <a
                 href=""
-                class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
+                class="flex items-center px-3 py-4 text-xs font-bold text-gray-800 uppercase lg:text-white lg:hover:text-gray-300 lg:py-2"
               >
                 <i
-                  class="lg:text-gray-300 text-gray-500 fab fa-facebook text-lg leading-normal"
+                  class="text-lg leading-normal text-gray-500 lg:text-gray-300 fab fa-facebook"
                 ></i>
-                <span class="lg:hidden inline-block ml-2"></span>
+                <span class="inline-block ml-2 lg:hidden"></span>
               </a>
             </li>
             <li class="flex items-center">
               <a
                 href=""
-                class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
+                class="flex items-center px-3 py-4 text-xs font-bold text-gray-800 uppercase lg:text-white lg:hover:text-gray-300 lg:py-2"
               >
                 <i
-                  class="lg:text-gray-300 text-gray-500 fab fa-twitter text-lg leading-normal"
+                  class="text-lg leading-normal text-gray-500 lg:text-gray-300 fab fa-twitter"
                 ></i>
-                <span class="lg:hidden inline-block ml-2"></span>
+                <span class="inline-block ml-2 lg:hidden"></span>
               </a>
             </li>
             <li class="flex items-center">
               <button
-                class="bg-white text-gray-800 active:bg-gray-100 text-xs font-bold uppercase px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none lg:mr-1 lg:mb-0 ml-3 mb-3"
+                class="px-4 py-2 mb-3 ml-3 text-xs font-bold text-gray-800 uppercase bg-white rounded shadow outline-none active:bg-gray-100 hover:shadow-md focus:outline-none lg:mr-1 lg:mb-0"
                 type="button"
               >
-                <i class="fas fa-arrow-circle-down mr-2"></i>
+                <i class="mr-2 fas fa-arrow-circle-down"></i>
                 Buy New Macbook
               </button>
             </li>
