--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/public/style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
     <title>Apple</title>
   </head>
-  <body class="bg-black">
+  <body>
     <nav
-      class="absolute top-0 z-50 flex flex-wrap items-center justify-between w-full px-2 py-3"
+      class="absolute top-0 z-50 flex flex-wrap items-center justify-between w-full px-2 py-3 bg-black"
     >
       <div
         class="container flex flex-wrap items-center justify-between px-4 mx-auto"
@@ -123,6 +123,32 @@
         </div>
       </div>
     </nav>
+
+    <main>
+      <div
+        class="relative flex items-center content-center justify-center pt-16 lg:pb-32 min-h-home-lg"
+        id="home"
+      >
+        <div class="absolute w-full h-full mt-14">
+          <video src="apple.mp4" autoplay muted class="top-0 bg-center">
+            <source
+              src="https://www.apple.com/105/media/us/macbook-pro-13/2020/f2b14406-42ad-405e-bfa0-71b52a0bfd67/anim/chip/large_2x.mp4"
+            />
+          </video>
+        </div>
+        <div class="container relative hidden mx-auto md:block">
+          <div class="flex flex-wrap items-center">
+            <div class="w-full px-4 ml-auto mr-auto text-center lg:w-6/12">
+              <div class="pr-12">
+                <h1 class="-mt-32 text-5xl font-semibold text-white sm:-mt-40">
+                  Welcome to Apple.
+                </h1>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <script>
       function toggleNavbar(collapseId) {
