remove unnecessary padding

--- a/public/index.html
+++ b/public/index.html
@@ -139,11 +139,11 @@
         <div class="container relative hidden mx-auto md:block">
           <div class="flex flex-wrap items-center">
             <div class="w-full px-4 ml-auto mr-auto text-center lg:w-6/12">
-              <div class="pr-12">
-                <h1 class="-mt-32 text-5xl font-semibold text-white sm:-mt-40">
-                  Welcome to Apple.
-                </h1>
-              </div>
+              <!-- <div class="pr-12"> -->
+              <h1 class="-mt-32 text-5xl font-semibold text-white sm:-mt-40">
+                Welcome to Apple.
+              </h1>
+              <!-- </div> -->
             </div>
           </div>
         </div>
