--- a/public/index.html
+++ b/public/index.html
@@ -177,7 +177,9 @@
                 class="relative flex flex-col w-full min-w-0 mb-8 break-words bg-white rounded-lg shadow-lg"
               >
                 <div class="flex-auto px-4 py-5">
-                  <div class="inline-flex items-center justify-center w-12 h-12 p-3 mb-5 text-center text-white bg-blue-400 rounded-full shadow-lg">
+                  <div
+                    class="inline-flex items-center justify-center w-12 h-12 p-3 mb-5 text-center text-white bg-blue-400 rounded-full shadow-lg"
+                  >
                     <i class="fas fa-laptop"></i>
                   </div>
                   <h6 class="text-xl font-semibold">Macbook Pro</h6>
@@ -207,6 +209,56 @@
                     eos aspernatur enim! Cumque!
                   </p>
                 </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="flex flex-wrap items-center mt-32">
+            <div class="w-full px-4 ml-auto mr-auto md:w-5/12">
+              <div
+                class="inline-flex items-center justify-center w-16 h-16 p-3 mb-6 text-center text-gray-600 bg-gray-200 rounded-full shadow-lg"
+              >
+                <i class="text-xl fas fa-tablet"></i>
+              </div>
+              <h3 class="mb-2 text-3xl font-semibold">New Ipad Pro.</h3>
+              <p class="mt-4 text-lg font-light leading-relaxed text-gray-700">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Asperiores earum, amet repellat dolor nostrum commodi debitis,
+                corporis, reprehenderit exercitationem optio minus blanditiis.
+                Ea cum accusantium modi eligendi dolor. Exercitationem laborum
+                saepe nam! Quidem possimus tempora harum.
+              </p>
+              <p class="mt-4 text-lg font-light leading-relaxed text-gray-700">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Asperiores earum, amet repellat dolor nostrum commodi debitis,
+                corporis, reprehenderit exercitationem optio minus blanditiis.
+                Ea cum accusantium modi eligendi dolor. Exercitationem laborum
+                saepe nam! Quidem possimus tempora harum.
+              </p>
+            </div>
+
+            <div class="w-full px-4 ml-auto mr-auto md:w-4/12">
+              <div
+                class="relative flex flex-col w-full min-w-0 mb-6 break-words bg-black rounded-lg shadow-lg"
+              >
+                <img
+                  src="ipad.jpg"
+                  class="w-full align-middle rounded-t-lg"
+                  alt="Ipad"
+                />
+                <!-- <img src="https://www.apple.com/v/ipad/home/bo/images/overview/trade_in__ejwkdm497no2_large.jpg" class="w-full align-middle rounded-t-lg" alt="Ipad"> -->
+                <blockquote class="relative p-8 mb-4 bg-black">
+                  <h4 class="text-lg font-bold text-white">
+                    Ipad Pro 12.9 & 11in.
+                  </h4>
+                  <p class="mt-2 font-light text-white text-md">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Doloremque officia rem repellendus cumque recusandae
+                    dignissimos, deleniti, accusamus repellat veniam illo ipsa
+                    quia exercitationem nobis molestias consequatur. Minus
+                    ratione rerum unde.
+                  </p>
+                </blockquote>
               </div>
             </div>
           </div>
