--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
         id="home"
       >
         <div class="absolute w-full h-full mt-14">
-          <video src="apple.mp4" autoplay muted class="top-0 bg-center">
+          <video src="assets/apple.mp4" autoplay muted class="top-0 bg-center">
             <source
               src="https://www.apple.com/105/media/us/macbook-pro-13/2020/f2b14406-42ad-405e-bfa0-71b52a0bfd67/anim/chip/large_2x.mp4"
             />
@@ -242,7 +242,7 @@
                 class="relative flex flex-col w-full min-w-0 mb-6 break-words bg-black rounded-lg shadow-lg"
               >
                 <img
-                  src="ipad.jpg"
+                  src="assets/ipad.jpg"
                   class="w-full align-middle rounded-t-lg"
                   alt="Ipad"
                 />
@@ -259,6 +259,61 @@
                     ratione rerum unde.
                   </p>
                 </blockquote>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="relative py-20 bg-black" id="macbook">
+        <div
+          class="absolute top-0 left-0 right-0 bottom-auto w-full -mt-20 overflow-hidden"
+          style="height: 80px"
+        >
+          <svg
+            class="absolute bottom-0 overflow-hidden"
+            xlmns="http//www.w3.org/2000/svg"
+            preserveAspectRatio="none"
+            version="1.1"
+            viewBox="0 0 2560 100"
+            x="0"
+            y="0"
+          >
+            <polygon
+              class="text-black fill-current"
+              points="2560 0 2560 100 0 100"
+            ></polygon>
+          </svg>
+        </div>
+
+        <div class="container px-4 mx-auto bg-black">
+          <div class="flex flex-wrap items-center">
+            <div class="w-full px-4 ml-auto mr-auto md:w-4/12">
+              <img
+                src="assets/macbook.jpg"
+                class="max-w-full rounded-lg shadow-lg"
+                style="width: 400px"
+                alt="Macbook"
+              />
+              <!-- <img src="https://www.apple.com/v/macbook-pro-13/g/images/overview/magic_keyboard__brx9diaauwaa_`large.jpg" class="max-w-full rounded-lg shadow-lg" style="width: 400px;" alt="Macbook"> -->
+            </div>
+
+            <div class="w-full px-4 ml-auto mr-auto md:w-5/12">
+              <div class="md:pr-12">
+                <div
+                  class="inline-flex items-center justify-center w-16 h-16 p-3 mb-6 text-center text-black bg-white rounded-full shadow-lg"
+                >
+                  <i class="text-xl fas fa-laptop"></i>
+                </div>
+                <h3 class="text-3xl font-semibold text-white">
+                  Macbook Pro 13&16in.
+                </h3>
+                <p class="mt-4 text-lg leading-relaxed text-gray-300">
+                  Ipsum irure ipsum elit elit minim commodo. Et est irure
+                  proident fugiat ad. Non sit ea anim do proident in minim ad ad
+                  excepteur laborum in ad. Mollit qui est esse duis sunt. In ad
+                  ea fugiat voluptate.
+                </p>
               </div>
             </div>
           </div>
