implement teams section

--- a/public/index.html
+++ b/public/index.html
@@ -246,7 +246,6 @@
                   class="w-full align-middle rounded-t-lg"
                   alt="Ipad"
                 />
-                <!-- <img src="https://www.apple.com/v/ipad/home/bo/images/overview/trade_in__ejwkdm497no2_large.jpg" class="w-full align-middle rounded-t-lg" alt="Ipad"> -->
                 <blockquote class="relative p-8 mb-4 bg-black">
                   <h4 class="text-lg font-bold text-white">
                     Ipad Pro 12.9 & 11in.
@@ -295,7 +294,6 @@
                 style="width: 400px"
                 alt="Macbook"
               />
-              <!-- <img src="https://www.apple.com/v/macbook-pro-13/g/images/overview/magic_keyboard__brx9diaauwaa_`large.jpg" class="max-w-full rounded-lg shadow-lg" style="width: 400px;" alt="Macbook"> -->
             </div>
 
             <div class="w-full px-4 ml-auto mr-auto md:w-5/12">
@@ -319,8 +317,150 @@
           </div>
         </div>
       </section>
-    </main>
 
+      <section class="relative py-20 bg-white" id="team">
+        <div
+          class="absolute top-0 left-0 right-0 bottom-auto w-full -mt-20 overflow-hidden"
+          style="height: 80px"
+        >
+          <svg
+            class="absolute bottom-0 overflow-hidden"
+            xlmns="http//www.w3.org/2000/svg"
+            preserveAspectRatio="none"
+            version="1.1"
+            viewBox="0 0 2560 100"
+            x="0"
+            y="0"
+          >
+            <polygon
+              class="text-white fill-current"
+              points="2560 0 2560 100 0 100"
+            ></polygon>
+          </svg>
+        </div>
+
+        <div class="container px-4 mx-auto">
+          <div class="flex flex-wrap justify-center mb-24 text-center">
+            <div class="w-full px-4 lg:w-6/12">
+              <h2 class="text-4xl font-semibold">Here Are Our Legends</h2>
+              <p class="m-4 text-lg leading-relaxed text-gray-600">
+                Consectetur quis et et enim cupidatat do et magna anim. Aliquip
+                minim ea aute laborum irure nulla eu laborum consequat laboris
+                cupidatat quis eiusmod quis. Ex incididunt tempor elit voluptate
+                ex excepteur id labore sint do deserunt nisi. Ut aute dolore
+                minim Lorem dolore minim minim veniam ad duis.
+              </p>
+            </div>
+          </div>
+
+          <div class="flex flex-wrap">
+            <div class="w-full px-4 mb-12 md:w-6/12 lg:w-3/12 lg:mb-0">
+              <div class="px-6">
+                <img
+                  src="assets/steve.jpg"
+                  class="mx-auto rounded-full shadow-lg"
+                  style="max-width: 120px"
+                  alt="Steve Jobs"
+                />
+                <div class="pt-6 text-center">
+                  <h5 class="text-xl font-bold">Steve Jobs</h5>
+                  <p class="mt-1 text-sm font-semibold text-gray-500 uppercase">Former CEO</p>
+                  <div class="mt-6">
+                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-blue-400 rounded-full outline-none ">
+                      <i class="fab fa-twitter"></i>
+                    </button>
+                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-blue-600 rounded-full outline-none">
+                      <i class="fab fa-facebook"></i>
+                    </button>
+                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-purple-600 rounded-full outline-none">
+                      <i class="fab fa-instagram"></i>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="w-full px-4 mb-12 md:w-6/12 lg:w-3/12 lg:mb-0">
+              <div class="px-6">
+                <img
+                  src="assets/tim.jpg"
+                  class="mx-auto rounded-full shadow-lg"
+                  style="max-width: 120px"
+                  alt="Tim Cook"
+                />
+                <div class="pt-6 text-center">
+                  <h5 class="text-xl font-bold">Tim Cook</h5>
+                  <p class="mt-1 text-sm font-semibold text-gray-500 uppercase">Current CEO</p>
+                  <div class="mt-6">
+                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-blue-400 rounded-full outline-none ">
+                      <i class="fab fa-twitter"></i>
+                    </button>
+                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-blue-600 rounded-full outline-none">
+                      <i class="fab fa-facebook"></i>
+                    </button>
+                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-purple-600 rounded-full outline-none">
+                      <i class="fab fa-instagram"></i>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="w-full px-4 mb-12 md:w-6/12 lg:w-3/12 lg:mb-0">
+              <div class="px-6">
+                <img
+                  src="assets/diaz.jpeg"
+                  class="mx-auto rounded-full shadow-lg"
+                  style="max-width: 120px"
+                  alt="Charles Diaz"
+                />
+                <div class="pt-6 text-center">
+                  <h5 class="text-xl font-bold">Charles Diaz</h5>
+                  <p class="mt-1 text-sm font-semibold text-gray-500 uppercase">Engineer</p>
+                  <div class="mt-6">
+                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-blue-400 rounded-full outline-none ">
+                      <i class="fab fa-twitter"></i>
+                    </button>
+                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-blue-600 rounded-full outline-none">
+                      <i class="fab fa-facebook"></i>
+                    </button>
+                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-purple-600 rounded-full outline-none">
+                      <i class="fab fa-instagram"></i>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="w-full px-4 mb-12 md:w-6/12 lg:w-3/12 lg:mb-0">
+              <div class="px-6">
+                <img
+                  src="assets/jake.png"
+                  class="mx-auto rounded-full shadow-lg"
+                  style="max-width: 120px"
+                  alt="Jake Santiago"
+                />
+                <div class="pt-6 text-center">
+                  <h5 class="text-xl font-bold">Jake Santiago</h5>
+                  <p class="mt-1 text-sm font-semibold text-gray-500 uppercase">Engineer</p>
+                  <div class="mt-6">
+                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-blue-400 rounded-full outline-none ">
+                      <i class="fab fa-twitter"></i>
+                    </button>
+                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-blue-600 rounded-full outline-none">
+                      <i class="fab fa-facebook"></i>
+                    </button>
+                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-purple-600 rounded-full outline-none">
+                      <i class="fab fa-instagram"></i>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <script>
       function toggleNavbar(collapseId) {
         document.getElementById(collapseId).classList.toggle("hidden");
