implement contact section

--- a/public/index.html
+++ b/public/index.html
@@ -364,15 +364,23 @@
                 />
                 <div class="pt-6 text-center">
                   <h5 class="text-xl font-bold">Steve Jobs</h5>
-                  <p class="mt-1 text-sm font-semibold text-gray-500 uppercase">Former CEO</p>
+                  <p class="mt-1 text-sm font-semibold text-gray-500 uppercase">
+                    Former CEO
+                  </p>
                   <div class="mt-6">
-                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-blue-400 rounded-full outline-none ">
+                    <button
+                      class="w-8 h-8 mb-1 mr-1 text-white bg-blue-400 rounded-full outline-none"
+                    >
                       <i class="fab fa-twitter"></i>
                     </button>
-                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-blue-600 rounded-full outline-none">
+                    <button
+                      class="w-8 h-8 mb-1 mr-1 text-white bg-blue-600 rounded-full outline-none"
+                    >
                       <i class="fab fa-facebook"></i>
                     </button>
-                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-purple-600 rounded-full outline-none">
+                    <button
+                      class="w-8 h-8 mb-1 mr-1 text-white bg-purple-600 rounded-full outline-none"
+                    >
                       <i class="fab fa-instagram"></i>
                     </button>
                   </div>
@@ -390,15 +398,23 @@
                 />
                 <div class="pt-6 text-center">
                   <h5 class="text-xl font-bold">Tim Cook</h5>
-                  <p class="mt-1 text-sm font-semibold text-gray-500 uppercase">Current CEO</p>
+                  <p class="mt-1 text-sm font-semibold text-gray-500 uppercase">
+                    Current CEO
+                  </p>
                   <div class="mt-6">
-                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-blue-400 rounded-full outline-none ">
+                    <button
+                      class="w-8 h-8 mb-1 mr-1 text-white bg-blue-400 rounded-full outline-none"
+                    >
                       <i class="fab fa-twitter"></i>
                     </button>
-                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-blue-600 rounded-full outline-none">
+                    <button
+                      class="w-8 h-8 mb-1 mr-1 text-white bg-blue-600 rounded-full outline-none"
+                    >
                       <i class="fab fa-facebook"></i>
                     </button>
-                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-purple-600 rounded-full outline-none">
+                    <button
+                      class="w-8 h-8 mb-1 mr-1 text-white bg-purple-600 rounded-full outline-none"
+                    >
                       <i class="fab fa-instagram"></i>
                     </button>
                   </div>
@@ -416,15 +432,23 @@
                 />
                 <div class="pt-6 text-center">
                   <h5 class="text-xl font-bold">Charles Diaz</h5>
-                  <p class="mt-1 text-sm font-semibold text-gray-500 uppercase">Engineer</p>
+                  <p class="mt-1 text-sm font-semibold text-gray-500 uppercase">
+                    Engineer
+                  </p>
                   <div class="mt-6">
-                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-blue-400 rounded-full outline-none ">
+                    <button
+                      class="w-8 h-8 mb-1 mr-1 text-white bg-blue-400 rounded-full outline-none"
+                    >
                       <i class="fab fa-twitter"></i>
                     </button>
-                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-blue-600 rounded-full outline-none">
+                    <button
+                      class="w-8 h-8 mb-1 mr-1 text-white bg-blue-600 rounded-full outline-none"
+                    >
                       <i class="fab fa-facebook"></i>
                     </button>
-                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-purple-600 rounded-full outline-none">
+                    <button
+                      class="w-8 h-8 mb-1 mr-1 text-white bg-purple-600 rounded-full outline-none"
+                    >
                       <i class="fab fa-instagram"></i>
                     </button>
                   </div>
@@ -442,15 +466,23 @@
                 />
                 <div class="pt-6 text-center">
                   <h5 class="text-xl font-bold">Jake Santiago</h5>
-                  <p class="mt-1 text-sm font-semibold text-gray-500 uppercase">Engineer</p>
+                  <p class="mt-1 text-sm font-semibold text-gray-500 uppercase">
+                    Engineer
+                  </p>
                   <div class="mt-6">
-                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-blue-400 rounded-full outline-none ">
+                    <button
+                      class="w-8 h-8 mb-1 mr-1 text-white bg-blue-400 rounded-full outline-none"
+                    >
                       <i class="fab fa-twitter"></i>
                     </button>
-                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-blue-600 rounded-full outline-none">
+                    <button
+                      class="w-8 h-8 mb-1 mr-1 text-white bg-blue-600 rounded-full outline-none"
+                    >
                       <i class="fab fa-facebook"></i>
                     </button>
-                    <button class="w-8 h-8 mb-1 mr-1 text-white bg-purple-600 rounded-full outline-none">
+                    <button
+                      class="w-8 h-8 mb-1 mr-1 text-white bg-purple-600 rounded-full outline-none"
+                    >
                       <i class="fab fa-instagram"></i>
                     </button>
                   </div>
@@ -460,7 +492,157 @@
           </div>
         </div>
       </section>
+
+      <section class="relative block pb-20 bg-black" id="contact">
+        <div
+          class="absolute top-0 left-0 right-0 bottom-auto w-full -mt-20 overflow-hidden"
+          style="height: 80px"
+        >
+          <svg
+            class="absolute bottom-0 overflow-hidden"
+            xlmns="http//www.w3.org/2000/svg"
+            preserveAspectRatio="none"
+            version="1.1"
+            viewBox="0 0 2560 100"
+            x="0"
+            y="0"
+          >
+            <polygon
+              class="text-black fill-current"
+              points="2560 0 2560 100 0 100"
+            ></polygon>
+          </svg>
+        </div>
+
+        <div class="container px-4 mx-auto lg:pt-24 lg:pb-64">
+          <div class="flex flex-wrap justify-center text-center text-white">
+            <div class="w-full px-4 lg:w-6/12">
+              <h2 class="text-4xl font-semibold">Contact Us</h2>
+              <p class="my-4 text-lg leading-relaxed text-gray-300">
+                Lorem adipisicing occaecat deserunt fugiat deserunt magna
+                consectetur culpa. Ex mollit excepteur mollit reprehenderit
+                dolor elit elit aliqua proident officia est velit minim. Aliquip
+                ullamco sunt consectetur anim nisi ipsum duis dolore adipisicing
+                magna elit quis culpa proident.
+              </p>
+            </div>
+          </div>
+
+          <div class="flex flex-wrap justify-center mt-12">
+            <div class="w-full px-4 text-center lg:w-3/12">
+              <div
+                class="inline-flex items-center justify-center w-12 h-12 p-3 text-gray-900 bg-white rounded-full shadow-lg"
+              >
+                <i class="text-lg fas fa-medal"></i>
+              </div>
+              <h6 class="mt-5 text-xl font-semibold text-white">
+                Lorem, ipsum.
+              </h6>
+              <p class="mt-2 mb-4 text-gray-300">
+                Velit qui sit tempor dolor duis dolor excepteur eu veniam Lorem.
+              </p>
+            </div>
+
+            <div class="w-full px-4 text-center lg:w-3/12">
+              <div
+                class="inline-flex items-center justify-center w-12 h-12 p-3 text-gray-900 bg-white rounded-full shadow-lg"
+              >
+                <i class="text-lg fas fa-lightbulb"></i>
+              </div>
+              <h6 class="mt-5 text-xl font-semibold text-white">
+                Lorem, ipsum.
+              </h6>
+              <p class="mt-2 mb-4 text-gray-300">
+                Velit qui sit tempor dolor duis dolor excepteur eu veniam Lorem.
+              </p>
+            </div>
+
+            <div class="w-full px-4 text-center lg:w-3/12">
+              <div
+                class="inline-flex items-center justify-center w-12 h-12 p-3 text-gray-900 bg-white rounded-full shadow-lg"
+              >
+                <i class="text-lg fas fa-poll"></i>
+              </div>
+              <h6 class="mt-5 text-xl font-semibold text-white">
+                Lorem, ipsum.
+              </h6>
+              <p class="mt-2 mb-4 text-gray-300">
+                Velit qui sit tempor dolor duis dolor excepteur eu veniam Lorem.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="relative block px-24 bg-black lg:pt-0">
+        <div class="container px-4 mx-auto">
+          <div class="flex flex-wrap justify-center -mt-48 lg:-mt-64">
+            <div class="w-full px-4 lg:w-6/12">
+              <div
+                class="relative flex flex-col w-full min-w-0 mb-6 break-words bg-gray-300 rounded-lg shadow-lg"
+              >
+                <div class="flex-auto p-5 lg:p-10">
+                  <h4 class="text-2xl font-semibold">Want To Work With Us?</h4>
+                  <p class="mt-1 mb-4 leading-relaxed text-gray-600">
+                    Complete this form and we will get back to you in 24 hours.
+                  </p>
+                  <div class="relative w-full mt-8 mb-3">
+                    <label
+                      for="name"
+                      class="block font-bold text-gray-700 uppercase"
+                    >
+                      Name
+                    </label>
+                    <input
+                      type="text"
+                      class="w-full p-3 text-sm text-gray-700 placeholder-gray-700 bg-white border-0 rounded shadow"
+                      placeholder=""
+                    />
+                  </div>
+                  <div class="relative w-full mt-8 mb-3">
+                    <label
+                      for="email"
+                      class="block font-bold text-gray-700 uppercase"
+                    >
+                      Email
+                    </label>
+                    <input
+                      type="email"
+                      class="w-full p-3 text-sm text-gray-700 placeholder-gray-400 bg-white border-0 rounded shadow"
+                      placeholder=""
+                    />
+                  </div>
+                  <div class="relative w-full mt-3 mb-3">
+                    <label
+                      for="message"
+                      class="block font-bold text-gray-700 uppercase"
+                    >
+                      Message
+                    </label>
+                    <textarea
+                      name=""
+                      id=""
+                      cols="30"
+                      rows="10"
+                      class="w-full p-3 rounded"
+                    ></textarea>
+                  </div>
+                  <div class="mt-6 text-center">
+                    <button
+                      class="px-6 py-3 mb-1 text-sm font-bold text-white uppercase bg-gray-900 rounded shadow outline-none hover:shadow-lg active:bg-gray-700"
+                      type="button"
+                    >
+                      Send Message
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+
     <script>
       function toggleNavbar(collapseId) {
         document.getElementById(collapseId).classList.toggle("hidden");
