--- a/public/index.html
+++ b/public/index.html
@@ -574,7 +574,7 @@
         </div>
       </section>
 
-      <section class="relative block bg-black px-24 lg:pt-0">
+      <section class="relative block bg-black pt-36 lg:px-24 lg:pt-0">
         <div class="container mx-auto px-4">
           <div class="-mt-48 flex flex-wrap justify-center lg:-mt-64">
             <div class="w-full px-4 lg:w-6/12">
@@ -642,6 +642,168 @@
         </div>
       </section>
     </main>
+
+    <footer class="relative pt-8 pb-6">
+      <div
+        class="absolute top-0 left-0 right-0 bottom-auto -mt-20 w-full overflow-hidden"
+        style="height: 80px"
+      >
+        <svg
+          class="absolute bottom-0 overflow-hidden"
+          xlmns="http//www.w3.org/2000/svg"
+          preserveAspectRatio="none"
+          version="1.1"
+          viewBox="0 0 2560 100"
+          x="0"
+          y="0"
+        >
+          <polygon
+            class="fill-current text-white"
+            points="2560 0 2560 100 0 100"
+          ></polygon>
+        </svg>
+      </div>
+
+      <div class="contaianer mx-auto px-4">
+        <div class="flex flex-wrap">
+          <div class="w-full px-4 lg:w-6/12">
+            <h4 class="text-3xl font-semibold capitalize">
+              Let's keep in touch!
+            </h4>
+            <h5 class="mb-2 text-lg capitalize text-gray-700">
+              You can find is on any of these platforms.
+            </h5>
+            <div class="mt-6">
+              <button
+                class="align-center mr-2 h-10 w-10 items-center justify-center rounded-full bg-white p-3 font-normal text-blue-400 shadow-lg outline-none"
+              >
+                <i class="fab fa-twitter"></i>
+              </button>
+              <button
+                class="align-center mr-2 h-10 w-10 items-center justify-center rounded-full bg-white p-3 font-normal text-blue-600 shadow-lg outline-none"
+              >
+                <i class="fab fa-facebook"></i>
+              </button>
+              <button
+                class="align-center mr-2 h-10 w-10 items-center justify-center rounded-full bg-white p-3 font-normal text-purple-500 shadow-lg outline-none"
+              >
+                <i class="fab fa-instagram"></i>
+              </button>
+              <button
+                class="align-center mr-2 h-10 w-10 items-center justify-center rounded-full bg-white p-3 font-normal text-red-600 shadow-lg outline-none"
+              >
+                <i class="fab fa-youtube"></i>
+              </button>
+              <button
+                class="align-center mr-2 h-10 w-10 items-center justify-center rounded-full bg-white p-3 font-normal text-black shadow-lg outline-none"
+              >
+                <i class="fab fa-github"></i>
+              </button>
+            </div>
+          </div>
+
+          <div class="w-full px-4 lg:w-6/12">
+            <div class="mb-6 flex flex-wrap">
+              <div class="ml-auto w-full px-4 lg:w-4/12">
+                <span
+                  class="block text-sm font-semibold uppercase text-gray-600"
+                >
+                  Useful links
+                </span>
+                <ul>
+                  <li>
+                    <a
+                      href="#"
+                      class="pb-2 text-sm font-semibold capitalize text-gray-700 hover:text-gray-900"
+                    >
+                      About Us
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="#"
+                      class="pb-2 text-sm font-semibold capitalize text-gray-700 hover:text-gray-900"
+                    >
+                      Contact Us
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="#"
+                      class="pb-2 text-sm font-semibold capitalize text-gray-700 hover:text-gray-900"
+                    >
+                      Our Products
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="#"
+                      class="pb-2 text-sm font-semibold capitalize text-gray-700 hover:text-gray-900"
+                    >
+                      Our Locations
+                    </a>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="ml-auto w-full px-4 lg:w-4/12">
+                <span
+                  class="block text-sm font-semibold uppercase text-gray-600"
+                >
+                  Useful Resources
+                </span>
+                <ul>
+                  <li>
+                    <a
+                      href="#"
+                      class="pb-2 text-sm font-semibold capitalize text-gray-700 hover:text-gray-900"
+                    >
+                      Lorem, ipsum.
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="#"
+                      class="pb-2 text-sm font-semibold capitalize text-gray-700 hover:text-gray-900"
+                    >
+                      Lorem.
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="#"
+                      class="pb-2 text-sm font-semibold capitalize text-gray-700 hover:text-gray-900"
+                    >
+                      Lorem, ipsum.
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="#"
+                      class="pb-2 text-sm font-semibold capitalize text-gray-700 hover:text-gray-900"
+                    >
+                      Lorem.
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <hr class="my-6 border-gray-400" />
+
+        <div
+          class="flex flex-wrap items-center justify-center md:justify-between"
+        >
+          <div class="mx-auto w-full px-4 md:w-4/12">
+            <div class="py-1 text-sm font-semibold text-gray-600">
+              Copyright 2021 Apple Clone By NowoDev
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script>
       function toggleNavbar(collapseId) {
