modify nav and footer
use fixed position for navbar, change footer font style, add margin on small screens

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav
-      class="absolute top-0 z-50 flex w-full flex-wrap items-center justify-between bg-black px-2 py-3"
+      class="fixed top-0 z-50 flex w-full flex-wrap items-center justify-between bg-black px-2 py-3"
     >
       <div
         class="container mx-auto flex flex-wrap items-center justify-between px-4"
@@ -135,17 +135,6 @@
               src="https://www.apple.com/105/media/us/macbook-pro-13/2020/f2b14406-42ad-405e-bfa0-71b52a0bfd67/anim/chip/large_2x.mp4"
             />
           </video>
-        </div>
-        <div class="container relative mx-auto hidden md:block">
-          <div class="flex flex-wrap items-center">
-            <div class="ml-auto mr-auto w-full px-4 text-center lg:w-6/12">
-              <!-- <div class="pr-12"> -->
-              <h1 class="-mt-32 text-5xl font-semibold text-white sm:-mt-40">
-                Welcome to Apple.
-              </h1>
-              <!-- </div> -->
-            </div>
-          </div>
         </div>
       </section>
 
@@ -671,7 +660,7 @@
               Let's keep in touch!
             </h4>
             <h5 class="mb-2 text-lg capitalize text-gray-700">
-              You can find is on any of these platforms.
+              You can find us on any of these platforms.
             </h5>
             <div class="mt-6">
               <button
@@ -702,11 +691,11 @@
             </div>
           </div>
 
-          <div class="w-full px-4 lg:w-6/12">
+          <div class="mt-6 w-full px-4 lg:mt-0 lg:w-6/12">
             <div class="mb-6 flex flex-wrap">
               <div class="ml-auto w-full px-4 lg:w-4/12">
                 <span
-                  class="block text-sm font-semibold uppercase text-gray-600"
+                  class="block text-sm font-semibold uppercase text-gray-900"
                 >
                   Useful links
                 </span>
@@ -714,7 +703,7 @@
                   <li>
                     <a
                       href="#"
-                      class="pb-2 text-sm font-semibold capitalize text-gray-700 hover:text-gray-900"
+                      class="pb-2 text-sm font-normal capitalize text-gray-700 hover:text-gray-900"
                     >
                       About Us
                     </a>
@@ -722,7 +711,7 @@
                   <li>
                     <a
                       href="#"
-                      class="pb-2 text-sm font-semibold capitalize text-gray-700 hover:text-gray-900"
+                      class="pb-2 text-sm font-normal capitalize text-gray-700 hover:text-gray-900"
                     >
                       Contact Us
                     </a>
@@ -730,7 +719,7 @@
                   <li>
                     <a
                       href="#"
-                      class="pb-2 text-sm font-semibold capitalize text-gray-700 hover:text-gray-900"
+                      class="pb-2 text-sm font-normal capitalize text-gray-700 hover:text-gray-900"
                     >
                       Our Products
                     </a>
@@ -738,7 +727,7 @@
                   <li>
                     <a
                       href="#"
-                      class="pb-2 text-sm font-semibold capitalize text-gray-700 hover:text-gray-900"
+                      class="pb-2 text-sm font-normal capitalize text-gray-700 hover:text-gray-900"
                     >
                       Our Locations
                     </a>
@@ -746,9 +735,9 @@
                 </ul>
               </div>
 
-              <div class="ml-auto w-full px-4 lg:w-4/12">
+              <div class="ml-auto mt-6 w-full px-4 lg:mt-0 lg:w-4/12">
                 <span
-                  class="block text-sm font-semibold uppercase text-gray-600"
+                  class="block text-sm font-semibold uppercase text-gray-900"
                 >
                   Useful Resources
                 </span>
@@ -756,7 +745,7 @@
                   <li>
                     <a
                       href="#"
-                      class="pb-2 text-sm font-semibold capitalize text-gray-700 hover:text-gray-900"
+                      class="pb-2 text-sm font-normal capitalize text-gray-700 hover:text-gray-900"
                     >
                       Lorem, ipsum.
                     </a>
@@ -764,7 +753,7 @@
                   <li>
                     <a
                       href="#"
-                      class="pb-2 text-sm font-semibold capitalize text-gray-700 hover:text-gray-900"
+                      class="pb-2 text-sm font-normal capitalize text-gray-700 hover:text-gray-900"
                     >
                       Lorem.
                     </a>
@@ -772,7 +761,7 @@
                   <li>
                     <a
                       href="#"
-                      class="pb-2 text-sm font-semibold capitalize text-gray-700 hover:text-gray-900"
+                      class="pb-2 text-sm font-normal capitalize text-gray-700 hover:text-gray-900"
                     >
                       Lorem, ipsum.
                     </a>
@@ -780,7 +769,7 @@
                   <li>
                     <a
                       href="#"
-                      class="pb-2 text-sm font-semibold capitalize text-gray-700 hover:text-gray-900"
+                      class="pb-2 text-sm font-normal capitalize text-gray-700 hover:text-gray-900"
                     >
                       Lorem.
                     </a>
@@ -796,9 +785,9 @@
         <div
           class="flex flex-wrap items-center justify-center md:justify-between"
         >
-          <div class="mx-auto w-full px-4 md:w-4/12">
+          <div class="mx-auto w-full px-4 text-center md:w-4/12">
             <div class="py-1 text-sm font-semibold text-gray-600">
-              Copyright 2021 Apple Clone By NowoDev
+              Copyright &copy; 2021 Apple UI By NowoDev
             </div>
           </div>
         </div>
