--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+    <link
+      href="https://upload.wikimedia.org/wikipedia/commons/7/74/Apple_logo_dark_grey.svg"
+      rel="icon"
+      type="image/x-icon"
     />
     <title>Apple</title>
   </head>
@@ -24,7 +30,7 @@
             href="#home"
             class="mr-4 inline-block whitespace-nowrap py-2 text-sm font-bold uppercase leading-relaxed text-white"
           >
-            Home
+            Apple
           </a>
 
           <button
