--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="style.css" rel="stylesheet" />
+    <title>Apple</title>
+
+    <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -13,13 +15,12 @@
 
     <link rel="apple-touch-icon" href="./assets/logo.svg" />
     <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
+    <!-- <meta name="mobile-web-app-status-bar-style" content="black" /> -->
     <meta name="theme-color" content="#db4938" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-title" content="Apple" />
 
     <link rel="manifest" href="./manifest.json" />
-
-    <title>Apple</title>
-    
-    <script src="./app.js"></script>
   </head>
   <body>
     <nav
@@ -804,6 +805,13 @@
         </div>
       </div>
     </footer>
+
+    <script>
+      // check that service workers are supported
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("./service-worker.js");
+      }
+    </script>
 
     <script>
       function toggleNavbar(collapseId) {
